cpdp/07-kong-cp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-ee-cp
  namespace: kong-ee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-ee-cp
  template:
    metadata:
      labels:
        app: kong-ee-cp
    spec:
      containers:
      - name: proxy
        image: leandrocarneiro/kong:2.2.0.0-beta1-alpine
        command: [ '/bin/sh' ]
        args:
          - -c
          - |
              ENTRYPOINT_RUN_MIGRATIONS=${ENTRYPOINT_RUN_MIGRATIONS:-true}
              ENTRYPOINT_CERT_TASKS=${ENTRYPOINT_CERT_TASKS:-true}

              if [ -d /vault/secrets ]; then
                  if [ "${ENTRYPOINT_CERT_TASKS}" == "true" ]; then
                      if [ $(id -u) != 0 ]; then echo "You must be root to manage certificates"; exit 1; fi
                      cp -v /vault/secrets/crt /usr/local/kong/cluster.crt
                      cp -v /vault/secrets/key /usr/local/kong/cluster.key
                  fi
              fi

              if [ "${ENTRYPOINT_RUN_MIGRATIONS}" == "true" ]; then
                  /usr/local/bin/kong migrations bootstrap
                  /usr/local/bin/kong migrations finish
                  /usr/local/bin/kong migrations up
              fi
              /docker-entrypoint.sh kong docker-start --vv
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - kong quit
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8100
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8100
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8001
          name: admin
          protocol: TCP
        - containerPort: 8002
          name: admin-gui
          protocol: TCP
        - containerPort: 8005
          name: control-plane
          protocol: TCP
        - containerPort: 8006
          name: telemetry
          protocol: TCP
        - containerPort: 8100
          name: metrics
          protocol: TCP
        - containerPort: 8003
          name: portal-gui
          protocol: TCP
        - containerPort: 8004
          name: portal-api
          protocol: TCP
        - containerPort: 8446
          name: portal-gui-ssl
          protocol: TCP
        - containerPort: 8447
          name: portal-api-ssl
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 384Mi
        securityContext:
          runAsUser: 0
        volumeMounts:
          - name: certs
            mountPath: /vault/secrets/crt
            subPath: crt
          - name: certs
            mountPath: /vault/secrets/key
            subPath: key
      volumes:
        - name: certs
          configMap:
            defaultMode: 0644
            name: certs
