cpdp/04-postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-control-plane
  namespace: kong-ee
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres-control-plane
  type: ClusterIP
