cpdp/12-kong-dp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kong-ee-dp
  namespace: kong-ee
spec:
  ports:
  - name: proxy
    port: 80
    protocol: TCP
    targetPort: 8000
    nodePort: 31080
  - name: proxy-ssl
    port: 443
    protocol: TCP
    targetPort: 8443
    nodePort: 31443
  selector:
    app: kong-ee-dp
  type: NodePort
