cpdp/10-kong-cp-ingress-admin.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: kong-ee
  name: kong-admin
spec:
  tls:
    - hosts:
        - kong-admin-gui-127-0-0-1.nip.io
  rules:
  - host: kong-admin-127-0-0-1.nip.io
    http:
      paths:
      - backend:
          serviceName: kong-ee-cp-internal
          servicePort: admin
        path: /
