cpdp/14-kong-cp-ingress-portal-api.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  namespace: kong-ee
  name: kong-portal-api
spec:
  tls:
    - hosts:
        - kong-portal-api-127-0-0-1.nip.io
  rules:
  - host: kong-portal-api-127-0-0-1.nip.io
    http:
      paths:
      - backend:
          serviceName: kong-ee-cp-internal
          servicePort: portal-api-ssl
        path: /
