cpdp/99-keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-keycloak
  namespace: kong-ee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-keycloak
  template:
    metadata:
      labels:
        app: postgres-keycloak
    spec:
      containers:
        - name: postgres
          image: postgres:10
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              name: postgres
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres-keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloak
  namespace: kong-ee
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres-keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: kong-ee
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-internal
  namespace: kong-ee
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: kong-ee
  name: keycloak
spec:
  tls:
    - hosts:
        - keycloak-127-0-0-1.nip.io
  rules:
  - host: keycloak-127-0-0-1.nip.io
    http:
      paths:
      - backend:
          serviceName: keycloak-internal
          servicePort: http
        path: /
